add combined examples

--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=Sebuah kumpulan library untuk membangun koneksi dengan RTL8720
 category=Sensors
 url=https://github.com/adafruit/Adafruit_Sensor
 architectures=bw6,rtl8720DN
-includes=PMX_bw16.h
+includes=PMX_bw16.h,PMX_aht10.h,pmx_snmp.h
 
